Fixup network configuration for ext-net
We currently make the external network a single-node gre network but
this is not at all correct for HA environments - we need a provider
network, which means having a bridge mapping, a flat network
specified, and then because we run the same ovs config everywhere we
need br-ex on the hypervisors too. This is entirely reasonable since
DVR will require this as well (and solve lots of scaling issues...).

Change-Id: I8b63ab51e7e20b235430fad8d786d8da005d84a1

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -106,9 +106,15 @@ parameters:
     description: Name of an existing EC2 KeyPair to enable SSH access to the instances
     type: string
   NeutronBridgeMappings:
-    description: The OVS logical->physical bridge mappings to use.
+    description: |
+      The OVS logical->physical bridge mappings to use. See the Neutron
+      documentation for details. Defaults to mapping br-ex - the external
+      bridge on hosts - to a physical name 'datacentre' which can be used
+      to create provider networks (and we use this for the default floating
+      network) - if changing this either use different post-install network
+      scripts or be sure to keep 'datacentre' as a mapping network name.
     type: string
-    default: ''
+    default: "datacentre:br-ex"
   NeutronPassword:
     default: unset
     description: The password for the neutron service account, used by neutron agents.
@@ -159,14 +165,19 @@ parameters:
     hidden: true
   NeutronFlatNetworks:
     type: string
-    default: ''
-    description: If set, flat networks to configure in neutron plugins.
+    default: 'datacentre'
+    description: |
+      If set, flat networks to configure in neutron plugins. Defaults to
+      'datacentre' to permit external network creation.
   HypervisorNeutronPhysicalBridge:
-    default: ''
-    description: An OVS bridge to create on each hypervisor.
+    default: 'br-ex'
+    description: |
+      An OVS bridge to create on each hypervisor. This defaults to br-ex the
+      same as the control plane nodes, as we have a uniform configuration of
+      the openvswitch agent. Typically should not need to be changed.
     type: string
   HypervisorNeutronPublicInterface:
-    default: ''
+    default: 'eth0'
     description: What interface to add to the HypervisorNeutronPhysicalBridge.
     type: string
   NeutronPublicInterface:
