Add specific pass-through config for each role
Supplement ExtraConfig with specific versions - ControllerExtraConfig and
NovaComputeExtraConfig. This allows the user to specify different
configurations for each role.

Change-Id: Ieaee80e414130504a5e40e878a5a4ca1c196ca2b

--- a/nova-compute-config.yaml
+++ b/nova-compute-config.yaml
@@ -59,3 +59,8 @@ resources:
     properties:
       group: os-apply-config
       config: {get_input: passthrough_config}
+  NovaComputePassthroughSpecific:
+    type: OS::Heat::StructuredConfig
+    properties:
+      group: os-apply-config
+      config: {get_input: passthrough_config_specific}
