--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -7,6 +7,7 @@ parameters:
     type: string
     hidden: true
   ExtraConfig:
+    default: {}
     description: |
       Additional configuration to inject into the cluster. The JSON should have
       the following structure:
@@ -42,6 +43,12 @@ parameters:
             ]
           }
         }
+    type: json
+  NovaComputeExtraConfig:
+    default: {}
+    description: |
+      NovaCompute specific configuration to inject into the cluster. Same
+      structure as ExtraConfig.
     type: json
   KeyName:
     description: Name of an existing EC2 KeyPair to enable SSH access to the instances
@@ -243,3 +250,12 @@ resources:
       signal_transport: NO_SIGNAL
       input_values:
         passthrough_config: {get_param: ExtraConfig}
+  NovaCompute0PassthroughSpecific:
+    depends_on: [NovaCompute0Passthrough]
+    type: OS::Heat::StructuredDeployment
+    properties:
+      config: {get_resource: NovaComputePassthroughSpecific}
+      server: {get_resource: NovaCompute0}
+      signal_transport: NO_SIGNAL
+      input_values:
+        passthrough_config_specific: {get_param: NovaComputeExtraConfig}
