Move config options under neutron.ovs
These config options are supposed to be under neutron.ovs (see template
for neutron openvswitch agent). They were mistakenly moved to be just
under neutron when the migration to SoftwareConfig was done.

Change-Id: I5769dc1dc501d48c965f8e4e36238cfcaac64a17

--- a/swift-source.yaml
+++ b/swift-source.yaml
@@ -12,7 +12,7 @@ resources:
           replicas: 1
           service-password: { get_input: swift_password }
         neutron:
-          enable_tunnelling: {get_param: NeutronEnableTunnelling}
-          tenant_network_type: {get_param: NeutronNetworkType}
           ovs:
             local_ip: { get_input: neutron_local_ip }
+            enable_tunnelling: { get_input: neutron_enable_tunnelling}
+            tenant_network_type: { get_input: neutron_tenant_network_type}
