--- a/swift-storage-source.yaml
+++ b/swift-storage-source.yaml
@@ -44,6 +44,8 @@ resources:
       signal_transport: NO_SIGNAL
       input_values:
         neutron_local_ip: {get_attr: [SwiftStorage0, networks, ctlplane, 0]}
+        neutron_tenant_network_type: {get_param: NeutronNetworkType}
+        neutron_enable_tunneling: {get_param: NeutronEnableTunnelling}
         swift_hash_suffix: {get_param: SwiftHashSuffix}
         swift_password: {get_param: SwiftPassword}
         swift_devices:
