Parametrize Swift partition power
The Swift partition power is currently hard-coded to 10.  While
this is fine for small Swift clusters there are some users who
will want to configure rings with higher partition powers.  We
have parametrized the value of the partition power, and the
default is set to 10.

Change-Id: If115cf5cf2f4c2ff7d28b0f5ae3d2ca3f4b4be5a

--- a/swift-source.yaml
+++ b/swift-source.yaml
@@ -7,7 +7,7 @@ resources:
         swift:
           devices: { get_input: swift_devices }
           hash: { get_input: swift_hash_suffix }
-          part-power: 10
+          part-power: { get_input: swift_part_power }
           proxy-memcache: { get_input: swift_proxy_memcache }
           replicas: {get_input: swift_replicas }
           service-password: { get_input: swift_password }
