--- a/swift-storage-source.yaml
+++ b/swift-storage-source.yaml
@@ -52,6 +52,7 @@ resources:
         neutron_enable_tunneling: {get_param: NeutronEnableTunnelling}
         swift_hash_suffix: {get_param: SwiftHashSuffix}
         swift_password: {get_param: SwiftPassword}
+        swift_part_power: {get_param: SwiftPartPower}
         swift_devices:
           Fn::Join:
           - ', '
