--- a/swift-deploy.yaml
+++ b/swift-deploy.yaml
@@ -10,6 +10,10 @@ parameters:
     description: The password for the swift service account, used by the swift proxy services.
     type: string
     hidden: true
+  SwiftPartPower:
+    default: 10
+    description: Partition Power to use when building Swift rings
+    type: number
   SwiftReplicas:
     type: number
     default: 1
@@ -24,6 +28,7 @@ resources:
       input_values:
         swift_hash_suffix: {get_param: SwiftHashSuffix}
         swift_password: {get_param: SwiftPassword}
+        swift_part_power: {get_param: SwiftPartPower}
         swift_devices:
           Fn::Join:
           - ', '
