controller0AllNodesConfig to controller0AllNodes.
Rename all occurrences of controller0AllNodesConfig to
controller0AllNodes as this is in line with compute node
deployments. Also the current naming is confusing as this is a
deployment step not a configuration step.

Change-Id: I8efa3b6a64a099e1e8ee43009472152aed5f8ad8

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -618,7 +618,7 @@ Resources:
       networks:
         - network: ctlplane
       user_data_format: SOFTWARE_CONFIG
-  controller0AllNodesConfig:
+  controller0AllNodes:
     Type: OS::Heat::StructuredDeployment
     Properties:
       config: {Ref: allNodesConfig}
