--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -307,7 +307,7 @@ Resources:
       length: 20
       salt:
         Ref: RabbitCookieSalt
-  NovaCompute0Config:
+  NovaCompute0Deploy:
     Type: FileInclude
     Path: nova-compute-instance.yaml
     SubKey: Resources.NovaCompute0Deploy
