Correct overcloud template to inherit passthrough
Inherit passthrough from nova-compute-instance.yaml, rather than
having an exact copy in overcloud-source.yaml.

Change-Id: I4f5a4a7be5835cb68755734aa72f8d9670cba0d4

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -337,12 +337,10 @@ Resources:
     Parameters:
         AllNodesConfig: {Ref: allNodesConfig}
   NovaCompute0Passthrough:
-    Type: OS::Heat::StructuredDeployment
-    Properties:
-      config: {Ref: NovaComputePassthrough}
-      server: {Ref: NovaCompute0}
-      signal_transport: NO_SIGNAL
-      input_values:
+    Type: FileInclude
+    Path: nova-compute-instance.yaml
+    SubKey: Resources.NovaCompute0Passthrough
+    Parameters:
         passthrough_config: {Ref: ExtraConfig}
   NovaCompute0:
     Type: FileInclude
