--- a/swift-deploy.yaml
+++ b/swift-deploy.yaml
@@ -23,45 +23,33 @@ Resources:
         swift_devices:
           Fn::Join:
           - ', '
-          - - Fn::Join:
-              - ''
-              - - 'r1z1-'
-                - {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [controller0, networks]} ]} ] }
-                - ':%PORT%/d1'
-            - Fn::Join:
-              - ', '
-              - Merge::Map:
-                  SwiftStorage0:
-                    Fn::Join:
-                    - ''
-                    - - 'r1z1-'
-                      - Fn::Select:
-                        - 0
-                        - Fn::Select:
-                          - 'ctlplane'
-                          - Fn::GetAtt:
-                            - SwiftStorage0
-                            - networks
-                      - ':%PORT%/d1'
+          - Merge::Map:
+              controller0:
+                Fn::Join:
+                - ''
+                - - 'r1z1-'
+                  - {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [controller0, networks]} ]} ] }
+                  - ':%PORT%/d1'
+              SwiftStorage0:
+                Fn::Join:
+                - ''
+                - - 'r1z1-'
+                  - Fn::Select:
+                    - 0
+                    - Fn::Select:
+                      - 'ctlplane'
+                      - Fn::GetAtt:
+                        - SwiftStorage0
+                        - networks
+                  - ':%PORT%/d1'
         swift_proxy_memcache:
           Fn::Join:
-          - ', '
-          - - Fn::Join:
-              - ''
-              - - {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [controller0, networks]} ]} ] }
-                - ':11211'
-            - Fn::Join:
-              - ', '
-              - Merge::Map:
-                  SwiftStorage0:
-                    Fn::Join:
-                    - ''
-                    - - Fn::Select:
-                        - 0
-                        - Fn::Select:
-                          - 'ctlplane'
-                          - Fn::GetAtt:
-                            - SwiftStorage0
-                            - networks
-                      - ':11211'
-
+            - ','
+            - Merge::Map:
+                controller0:
+                  Fn::Join:
+                    - ', '
+                    - - Fn::Join:
+                        - ''
+                        - - {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [controller0, networks]} ]} ] }
+                          - ':11211'
