--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -617,6 +617,7 @@ Resources:
         - network: ctlplane
       user_data_format: SOFTWARE_CONFIG
   controller0AllNodes:
+    DependsOn: [controller0Deployment,controller0SSLDeployment,controller0Swift,controller0Passthrough]
     Type: OS::Heat::StructuredDeployment
     Properties:
       config: {Ref: allNodesConfig}
