Use VIP for keystone host in swift template
As a side effect this fixes invalid keystone host generation
when multiple controller nodes are used.

Change-Id: I081976f0da94fc0232dfa2c34de03bbb4abf1a85

--- a/swift-storage-source.yaml
+++ b/swift-storage-source.yaml
@@ -35,7 +35,7 @@ resources:
       config: {get_resource: SwiftKeystoneConfig}
       signal_transport: NO_SIGNAL
       input_values:
-        keystone_host: {get_attr: [controller0, networks, ctlplane, 0]}
+        keystone_host: {get_attr: [ControlVirtualIP, fixed_ips, 0, ip_address]}
   SwiftStorage0Deploy:
     type: OS::Heat::StructuredDeployment
     properties:
