Set basic pacemaker and corosync properties in undercloud
Because services which depend on pacemaker (ceilometer central
agent and neutron services) are used in undercloud too, we need to
set basic pacemaker and corosync metadata for undercloud.

Related to: Ifa83d62c2132bcdcb40d0b7c80ce3adadc0b5587
Related to: I63f054a8c80f9f676a77341c89e605b5b472d078
Change-Id: Icc97e36a1db198b973041346cf2056f68de661a2

--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -205,6 +205,17 @@ resources:
             get_param: NeutronPublicInterfaceIP
         controller-address:
           get_input: controller_host
+        corosync:
+          bindnetaddr: {get_input: controller_host}
+          mcastport: 5577
+          nodes:
+            Merge::Map:
+              controller0:
+                ip: {get_attr: [undercloud, networks, ctlplane, 0]}
+        pacemaker:
+          stonith_enabled : false
+          recheck_interval : 5
+          quorum_policy : ignore
         ceilometer:
           db: mysql://ceilometer:unset@localhost/ceilometer
           metering_secret: {get_param: CeilometerMeteringSecret}
